<?xml version="1.0"?>
<package>
  <name>mader_other</name>
  <version>0.0.0</version>
  <description>The mader_other package</description>


  <maintainer email="jtorde@mit.edu">jtorde</maintainer>

  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>